--- a/ColonyAutomata/ColonyAutomata.vcxproj.filters
+++ b/ColonyAutomata/ColonyAutomata.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="ColonyAutomata.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Person.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ColonyAutomata.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Person.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
